# IC3_changeSATSolver

./: .gitmodules  README.md  cadical_istrue.sh  compileIC3_cadical.sh  compileIC3_cryminisat.sh  compileIC3ref.sh  istrue_cryminisat.sh  recomIC3changed.sh
IC3_cadicalsat/: CMakeLists.txt  IC3.cpp  Model.cpp  Model.h  TransSolver.cpp  TransSolver.h
IC3_cryminsat/: CMakeLists.txt  IC3.cpp  Model.cpp  Model.h  TransSolver.cpp  TransSolver.h
